fixed form, but needs alignment still

--- a/css/main.css
+++ b/css/main.css
@@ -141,10 +141,6 @@ img {
     margin: auto;
 }
 
-.price {
-    display: none;
-}
-
 #custom {
     margin: 20px 0 5px 0;
     height: 45px;
@@ -164,13 +160,6 @@ img {
     100% {background-color: rgb(150, 80, 150); left: 550px;}
 }
 
-.hide {
-    visibility: hidden;
-    height: 200px;
-    width: 200px;
-    border-radius: 4px;
-}
-
 /* footer styling */
 footer {
     margin: 0;
@@ -180,26 +169,50 @@ footer {
     font-size: 12px;
 }
 
+#form {
+    padding: 20px;
+}
+
+label {
+    font-weight: bold;
+    font-size: 16px;
+}
+input[type=text], select {
+    width: 30%;
+    padding: 12px 20px;
+    margin: 20px 20px;
+    font-weight: bold;
+    font-size: 16px;
+    display: inline-block;
+    background-color: #ABA8B2;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 60%;
+    position: center;
+    font-weight: bold;
+    font-size: 16px;
+    background-color: rgb(150, 80, 150);
+    padding: 14px 20px;
+    margin: 8px;
+    margin-left: 15%;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
 #copyright{    
     font-size: 10px;
     padding-left: 20px; 
-}
-
-.btn #email {
-
-    padding: 5px;
-    background-color: #ABA8B2;
-    float: left;
-}
-
-#email {
-    width: 250px;
-    height: 30px;
-    margin: 20px;
-    border-radius: 5px;
+    width: 30%;
 }
 
 #address {
     margin: 0;
     text-align: center;
+    width: 30%;
+    float: center;
 }
